--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "test": "npm run lint && npm run jest",
     "lint": "tslint -p .",
     "jest": "jest --detectOpenHandles --forceExit",
-    "publish": "npm run build && np --no-cleanup --no-yarn"
+    "publish": "npm run build"
   },
   "author": "zcong1993 <1005997919@qq.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^23.1.5",
     "jest": "^23.4.0",
-    "np": "^3.0.4",
     "ts-jest": "^23.0.0",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.4.2",
